Removed "display: inline-block;" from input-row css which seems useless, and is compatible with very little navigators versions (http://www.quirksmode.org/css/display.html#inlineblock). This fixed the problem of Reminders label/inputs alignement in basic ticket display (rt3.fsck.com:9899).
git-svn-id: svn+ssh://svn.bestpractical.com/svn/bps-public/rt/3.8/trunk@13758 e417ac7c-1bcc-0310-8ffa-8f5827389a85

--- a/share/html/NoAuth/css/web2/forms.css
+++ b/share/html/NoAuth/css/web2/forms.css
@@ -54,7 +54,6 @@ form {
 
 
 .input-row .label {
-  display: inline-block;
   position: relative;
   text-align: right;
   width: 4em;
